Fixed image size issue on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@
 #post_content img{
     border-radius: 10px;
     box-shadow: 10px 10px 5px #b9b9b9;
+    width: 100%;
 }
 
 #post_content a::after{
